# vires

./: .env.example  .gitignore  .gitleaks-baseline.json  .venv  CONTRIBUTING.md  NOTICE  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  deploy.yml  gitleaks.yml  pip-audit.yml
alembic/: env.py
alembic/versions/: 1d821b911adb_is_timed_target_duration.py  25fc1590293f_user_settings.py  312bbf0caadb_target_weight_on_template_session_.py  52e681744f33_planned_workout_reschedule_provenance.py  a1b2c3d4e5f6_calendar_events.py  a1b2c3d4e5f6_ruck_sessions.py  a1b2c3d4e5f8_ailment_episodes.py  a2b3c4d5e6f7_auth_magic_link_sessions_allowlist.py  a2b3c4d5e6f7_auth_magic_link_sessions_invites.py  a785c819fa5f_initial_schema.py  a7ad5d99b363_merge_ruck_into_activity.py  a7b8c9d0e1f2_program_objective_link.py  b1c2d3e4f5a6_ai_coach_calendar.py  b2c3d4e5f6a7_calendar_events.py  b3c4d5e6f7a8_preferred_weekdays.py  b8c9d0e1f2a3_identity_user_id.py  c2d3e4f5a6b7_user_settings_feed_token.py  c3d4e5f6a7b8_activity_sessions.py  (+14 more)
api/: __init__.py  config.py  main.py  serializers.py
data/: coach_cost.jsonl
infrastructure/: PROVISION.md  deploy-on-merge.sh  nginx.conf  vires.service  vires_runner_spot_bootstrap.sh
scripts/: fetch_exercise_seed.py  gen_vapid.py  make_icons.py
tests/: conftest.py  test_activity.py  test_ailments.py  test_alembic_migrations.py  test_auth.py  test_auth_jwt.py  test_autoregulate.py  test_autoregulation_flow.py  test_calendar_events.py  test_calendar_feed.py  test_catalog.py  test_coach.py  test_coach_routines.py  test_exercise_swap.py  test_exercise_taxonomy.py  test_exercises.py  test_geo_gpx.py  test_geo_measure.py  test_geo_providers.py  test_health.py  test_objective_coach.py  test_objective_focus.py  test_objectives.py  test_pandolf.py  test_plan.py  test_plan_change_audit.py  test_program_strategy.py  test_prompt_loader.py  test_push.py  test_records.py  test_replan.py  test_replan_api.py  test_reschedule.py  test_reschedule_api.py  test_reschedule_migration.py  test_routes_api.py  test_ruck.py  test_ruck_merge_migration.py  test_season_phases.py  test_settings.py  (+6 more)
web/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+157 files in other folders)
