[project]
name = "vires"
version = "0.1.0"
description = "Strength-training tracker with hybrid exercise search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Brian McMahon", email = "brian@nousergon.ai" }]
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastembed>=0.4",
    "numpy>=1.26",
    "httpx>=0.27",
    # Guards untrusted GPX-file XML parsing against entity-expansion/DTD
    # attacks (api/services/geo/gpx.py, config-I2632) — stdlib ElementTree
    # resolves DOCTYPE-declared entities by default.
    "defusedxml>=0.7.1",
    # krepis provider-agnostic LLM adapter (Anthropic / OpenAI / OpenRouter
    # behind one call surface). Active coach model = /vires/llm/coach SSM
    # param or VIRES_COACH_LLM env; both SDK transports installed.
    # >=0.11.0 for ModelSpec.reasoning (krepis#16) — required by
    # _resolve_spec()'s OpenRouter reasoning-exclude override (config#1999).
    "krepis[anthropic,openai]>=0.14.0",
    "pywebpush>=1.14",
    # Verifies nousergon-auth's EdDSA/Ed25519 JWTs against its JWKS
    # (vires-ops#60) — [crypto] pulls in `cryptography` for the Ed25519 path.
    "pyjwt[crypto]>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "genbadge[coverage]>=1.1.3",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]  # autogenerated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends()/Query() in defaults is the intended idiom

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["api"]
omit = ["api/db/seed.py"]  # one-shot catalog seeding, not unit-tested

[tool.coverage.report]
# Native coverage GATE: CI fails if backend coverage drops below this floor.
# Ratchet — raise as coverage improves (currently ~92%).
fail_under = 85
